Issue IMCMS-818 RB6: Change the padding between folders in Image archive: - reduce the spacing between the folders/sub-folders/catalogues in the image archive

--- a/src/main/webapp/imcms/css/choose_img/imcms-content_manager.scss
+++ b/src/main/webapp/imcms/css/choose_img/imcms-content_manager.scss
@@ -191,11 +191,11 @@ float: left;
 @media screen and (max-width: 1200px) {
 .imcms-content-manager .imcms-right-side,
 .imcms-content-manager__footer {
-    width: 60%;
+    width: 65%;
 }
 
 .imcms-content-manager__left-side {
-    width: 40%;
+    width: 35%;
 }
 
 .imcms-toolbar-images-tools__sorting {
@@ -212,10 +212,10 @@ float: left;
 @media screen and (max-width: 819px) {
 .imcms-content-manager .imcms-right-side,
 .imcms-content-manager__footer {
-    width: 45%;
+    width: 65%;
 }
 .imcms-content-manager__left-side{
-    width: 55%;
+    width: 35%;
 }
 
 .imcms-toolbar-images-tools__sorting{
