--- a/src/main/webapp/imcms/css/choose_img/imcms-folder.scss
+++ b/src/main/webapp/imcms/css/choose_img/imcms-folder.scss
@@ -4,7 +4,7 @@
     cursor: pointer;
     display: block;
     overflow: hidden;;
-    padding: 25px 35px 25px 70px;
+    padding: 18px 35px 18px 40px;
     position: relative;
     width: 100%;
 	border: 2px transparent solid;
@@ -29,7 +29,7 @@
     display: block;
     padding: 10px;
     position: absolute;
-    left: 37px;
+    left: 18px;
     width: 10px;
     height: 10px;
 }
