--- a/src/main/webapp/imcms/css/choose_img/imcms-folders.scss
+++ b/src/main/webapp/imcms/css/choose_img/imcms-folders.scss
@@ -16,33 +16,33 @@
 }
 
 .imcms-folders[data-folders-lvl="2"] .imcms-folder {
-    padding-left: 98px;
+    padding-left: 59px;
 }
 
 .imcms-folders[data-folders-lvl="2"] .imcms-folder__btn {
-    left: 70px;
+    left: 36px;
 }
 
 .imcms-folders[data-folders-lvl="3"] .imcms-folder {
-    padding-left: 126px;
+    padding-left: 79px;
 }
 
 .imcms-folders[data-folders-lvl="3"] .imcms-folder__btn {
-    left: 98px;
+    left: 56px;
 }
 
 .imcms-folders[data-folders-lvl="4"] .imcms-folder {
-    padding-left: 154px;
+    padding-left: 99px;
 }
 
 .imcms-folders[data-folders-lvl="4"] .imcms-folder__btn {
-    left: 126px;
+    left: 76px;
 }
 
 .imcms-folders[data-folders-lvl="5"] .imcms-folder {
-    padding-left: 182px;
+    padding-left: 119px;
 }
 
 .imcms-folders[data-folders-lvl="5"] .imcms-folder__btn {
-    left: 154px;
+    left: 96px;
 }
