--- a/src/main/webapp/imcms/css/imcms-controls.scss
+++ b/src/main/webapp/imcms/css/imcms-controls.scss
@@ -6,7 +6,7 @@
     border-bottom: 2px solid #d3d8de;
     display: block;
     overflow: hidden;
-    padding: 25px 25px;
+    padding: 18px 35px 18px 40px;
     width: 100%;
 }
 
@@ -85,7 +85,6 @@
 }
 
 .imcms-main-folders-controls__name {
-    padding-left: 45px;
     color: #fff;
     cursor: pointer;
     text-align: left;
